<resources>
    <string name="app_name">牛拍</string>

    <string name="home">首页</string>
    <string name="my">我的</string>
    <!-- Login Start -->
    <string name="login">登录</string>
    <string name="title_activity_login">水晶直播登录</string>

    <string name="login_name">请输入账号</string>
    <string name="login_pwd">请输入6&#8211;10位的密码</string>
    <string name="text_login">登录</string>
    <string name="login_wechat">微信登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_sina">微博登录</string>

    <string name="login_happy">欢乐直播登录</string>
    <string name="login_crystal">水晶直播登录</string>
    <string name="agreement_1">登录即代表您同意</string>
    <string name="agreement_2">使用协议和隐私政策</string>

    <!--Login End-->

    <string name="umeng_check_sign">检查签名</string>
    <string name="umeng_check_sina">检查新浪</string>
    <string name="umeng_check_wx">检查微信</string>
    <string name="umeng_check_alipay">检查支付宝</string>
    <string name="umeng_check_qq">检查qq</string>
    <string name="umeng_check_fb">检查facebook</string>
    <string name="umeng_check_vk">vkontakte</string>
    <string name="umeng_choose_style">选择分享类型</string>
    <string name="umeng_check_title">自检工具</string>

    <!--FragmentMy Start-->
    <string name="bio_default">签名:这个人很懒，什么都没有写。</string>

    <string name="works_my">作品</string>
    <string name="favorite_my">喜欢</string>
    <string name="follow_my">关注</string>
    <string name="fans_my">粉丝</string>
    <string name="wallet_my">我的钱包</string>
    <string name="make_money">去赚钱 ></string>

    <string name="rmb_sign">¥</string>
    <string name="money_my">10000</string>
    <string name="withdraw">提现</string>
    <string name="daily_redraw">每日奖励</string>
    <string name="yuan">元</string>
    <string name="maked_today">今日已得</string>
    <string name="tv_msg">消息</string>
    <string name="tv_setting">设置</string>
    <!--FragmentMy End-->

    <string name="input_comment">输入评论&#8230;</string>
    <string name="video_bottom">主播在欢乐直播等你哟~</string>
    <string name="tv_video_btn">点击前往</string>
    <string name="tv_send_comment">发送</string>
    <string name="tv_nothing">暂无数据</string>
    <string name="tv_personal_follow">+关注</string>
    <string name="unfollow">取消关注</string>
    <string name="followed">已关注</string>
    <string name="name">名称:</string>
    <string name="signature">签名:</string>
    <string name="save">保存</string>
    <string name="gender">性别:</string>
    <string name="click_go">点击前往></string>
    <string name="cancel">取消</string>
    <string name="withdraw_affirm">确定</string>

    <string name="guide">立即体验</string>

    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="cache_clear">清理缓存</string>
    <string name="quit">退出登录</string>

    <string name="cache_size">%1$s</string>
    <string name="play_num">%1$d次播放</string>
    <string name="follow_num">%1$d赞</string>
    <string name="comment_num">%1$d评论</string>

    <string name="withdraw_title_1">提现到此账户</string>
    <string name="withdraw_title_2">提现金额</string>
    <string name="zfb">支付宝账号</string>
    <string name="really_name">真实姓名</string>
    <string name="account_explain_1">官方会把提现金额打入此支付宝账号，请确保信息准确！</string>
    <string name="account_explain_2">用于核实您的支付宝账号，请确保信息准确！</string>
    <string name="string_rule">提现规则</string>
    <string name="string_rule_1">1.钱包满100元才能提现</string>
    <string name="string_rule_2">2.每周限提现一次</string>
    <string name="feedback_hint">请尽情吐槽吧~(๑≧∀≦๑)</string>

    <string name="search_hint">输入昵称、用户id、标签</string>
    <string name="withdraw_money_hint"><font size="16">提现金额只能为整数~</font></string>
    <!--Ijkplayer Start-->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <!--Ijkplayer End-->
</resources>
