<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/black"/>

            <com.jhjj9158.niupaivideo.widget.MyDrawLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/drawer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black">

                <com.jhjj9158.niupaivideo.widget.IjkVideoView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.jhjj9158.niupaivideo.widget.IjkVideoView>

            </com.jhjj9158.niupaivideo.widget.MyDrawLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/background_light">

        <ImageView
            android:id="@+id/video_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_navigate_before_black"/>


        <ImageView
            android:id="@+id/video_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/video_back"
            android:src="@drawable/heart"/>

        <ImageView
            android:id="@+id/video_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/video_heart"
            android:src="@drawable/share"/>

        <TextView
            android:id="@+id/tv_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/input_comment"
            android:textColor="@color/home_tab"
            android:textSize="12sp"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/button_login"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_video_bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="70dp"
                android:text="@string/video_bottom"/>

            <TextView
                android:id="@+id/btn_video_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_video_bottom"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:text="@string/tv_video_btn"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_headImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"/>
    </RelativeLayout>

</RelativeLayout>
